move v1_5_0 tag