@@ -75,7 +75,7 @@ public class CommunityModuleAdapter {
 
    public static String getUserNameByAuthenticationId(int authenticationId) {
       AuthenticationService authenticationService = (AuthenticationService) ApplicationContextFactory.getApplicationContext().getBean("authenticationService");
-      com.finalist.cmsc.services.community.security.Authentication authentication = authenticationService.getAuthenticationById(Long.valueOf(authenticationId));
+      com.finalist.cmsc.services.community.security.Authentication authentication = authenticationService.getAuthenticationById(new Long(authenticationId));
       if (authentication != null) {
          return authentication.getUserId();
       }
